bugfix: hide overflow dashboard names

--- a/src/app/modules/dashboard/dashboard.less
+++ b/src/app/modules/dashboard/dashboard.less
@@ -100,3 +100,8 @@ textbox.query
   overflow: hidden;
   width: 160px;
 }
+
+.dash-title
+{
+  overflow: hidden;
+}
